--- a/package.json
+++ b/package.json
@@ -5,21 +5,45 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "jest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-typescript": "^7.19.0",
+    "@types/jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.2",
+    "jest-matcher-css": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "babel-jest": "^29.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.0.2",
     "postcss": "^8.4.16",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.ts"
+    }
   }
 }
